Version 0.7.4 2007-04-0?

Code:
- Sinica Treebank corpus reader
- new web corpus reader
- tag package now supports pickling
Corpora:
- Rotokas texts
Tutorials:
- Substantial work on Part II of book on
  structured programming, parsing and grammar
Contrib:
- validation of toolbox entries using chunking
- improved classifiers
Distribution:
- updated for Python 2.5.1, Numpy 1.0.2

Version 0.7.3 2007-04-02
	
* Code:
 - made chunk.Regexp.parse() more flexible about its input
 - developed new syntax for PCFG grammars, e.g. A -> B C [0.3] | D [0.7]
 - fixed CFG parser to support grammars with slash categories
 - moved beta classify package from main NLTK to contrib
 - Brill taggers loaded correctly
 - misc bugfixes
* Corpora:
 - Shakespeare XML corpus sample and corpus reader
* Tutorials:
 - improvements to prose, exercises, plots, images
 - expanded and reorganized tutorial on structured programming
 - formatting improvements for Python listings
 - improved plots (using pylab)
 - categorization of problems by difficulty
Contrib:
 - more work on kimmo lexicon and grammar
 - more work on classifiers

Version 0.7.2 2007-03-01

* Code:
 - simple feature detectors (detect module)
 - fixed problem when token generators are passed to a parser (parse package)
 - fixed bug in Grammar.productions() (identified by Lucas Champollion and Mitch Marcus)
 - fixed import bug in category.GrammarFile.earley_parser
 - added utilities.OrderedDict
 - initial port of old NLTK classifier package (by Sam Huston)
 - UDHR corpus reader
* Corpora:
 - added UDHR corpus (Universal Declaration of Human Rights)
     with 10k text samples in 300+ languages
* Tutorials:
 - improved images
 - improved book formatting, including new support for:
   - javascript to copy program examples to clipboard in HTML version,
   - bibliography, chapter cross-references, colorization, index, table-of-contents

* Contrib:
  - new Kimmo system: contrib.mit.six863.kimmo (Rob Speer)
  - fixes for: contrib.fsa (Rob Speer)