@@ -168,32 +168,25 @@
         14. Regular Expressions
         <br/>
 
-        <a href="/lite/doc/en/projects.html"><img src="html.gif" border=0></a>
-        <a href="/lite/doc/en/projects.pdf"><img src="pdf.gif" border=0></a>
-        <img src="spacer.gif" border=0>
-        <img src="spacer.gif" border=0>
-        15. Project Topics
-        <br/>
-
         <a href="/lite/doc/en/nlp-python.html"><img src="html.gif" border=0></a>
         <a href="/lite/doc/en/nlp-python.pdf"><img src="pdf.gif" border=0></a>
         <img src="spacer.gif" border=0>
         <img src="spacer.gif" border=0>
-        16. NLP using Python vs Other Languages
+        15. NLP using Python vs Other Languages
         <br/>
 
         <a href="/lite/doc/en/nltk.html"><img src="html.gif" border=0></a>
         <a href="/lite/doc/en/nltk.pdf"><img src="pdf.gif" border=0></a>
         <img src="spacer.gif" border=0>
         <img src="spacer.gif" border=0>
-        17. NLTK Modules and Corpora
+        16. NLTK Modules and Corpora
         <br/>
 
         <a href="/lite/doc/en/cheat-sheet.html"><img src="html.gif" border=0></a>
         <a href="/lite/doc/en/cheat-sheet.pdf"><img src="pdf.gif" border=0></a>
         <img src="spacer.gif" border=0>
         <img src="spacer.gif" border=0>
-        18. Cheat Sheet
+        17. Cheat Sheet
         <br/>
 
         <a href="/lite/doc/en/term_index.html"><img src="html.gif" border=0></a>
