@@ -50,8 +50,9 @@
 
   <h2> Assignments and Projects </h2>
   
-  <p> NLTK can be used to create student assignments of varying
-  difficulty and scope.  
+  <p> NLTK can be used to create student assignments and projects of varying
+  difficulty and scope; a variety are described
+  <a href="http://nltk.sourceforge.net/wiki/index.php/Projects">here</a>.
 
   <!-- Use a module --> In the simplest assignments, students
   experiment with an existing module.  The wide variety of existing
@@ -65,7 +66,11 @@
   <!-- Develop a new module --> A more challenging task is to develop
   a new module.  Here, NLTK provides some useful starting points:
   predefined interfaces and data structures, and existing modules that
-  implement the same interface. </p>
+  implement the same interface.
+
+  <!-- Contribute --> Please submit student projects to the NLTK team
+  so we can consider them for inclusion in nltk_lite.contrib.
+  </p>
 
   <h2> Demonstrations </h2>
   
